# EnergyDashboard

./: .gitignore  README.md  requirements.txt
energy-scope/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
energy-scope/backend/: Dockerfile  pyproject.toml
energy-scope/backend/app/: __init__.py  main.py
energy-scope/backend/app/api/routes/: measurements.py
energy-scope/backend/app/core/: logging.py
energy-scope/backend/app/db/: base.py  init_db.py  session.py
energy-scope/backend/app/models/: __init__.py  energy_measurement.py
energy-scope/backend/app/repositories/: measurements.py
energy-scope/backend/app/schemas/: measurements.py
energy-scope/backend/app/services/: measurements.py
energy-scope/frontend/: Dockerfile  index.html  package.json
energy-scope/ingestion/: pyproject.toml
energy-scope/ingestion/energy_ingestion/: __init__.py  logging.py
energy-scope/ingestion/energy_ingestion/clients/: __init__.py  rte_client.py  weather_client.py
energy-scope/ingestion/energy_ingestion/jobs/: ingest_weather.py  load_actual_generation_to_postgres.py  test_rte_raw.py
energy-scope/ingestion/energy_ingestion/loaders/: __init__.py  postgres_loader.py  processed_loader.py  raw_loader.py
energy-scope/ingestion/energy_ingestion/quality/: __init__.py  checks.py
energy-scope/ingestion/energy_ingestion/transforms/: __init__.py  actual_generation_transform.py  common.py  consumption_transform.py  weather_transform.py
energy-scope/tests/: conftest.py  test_measurements_api.py  test_parquet_loader.py  test_quality_checks.py  test_raw_loader.py  test_transform_consumption.py  (+1 more)
(+207 files in other folders)
