[project]
name = "energy-scope-backend"
version = "0.1.0"
description = "Backend service for Energy Scope."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pandas>=2.2.0,<4.0.0",
    "pyarrow>=16.0.0,<25.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
